# game_project

./: Cargo.toml
architecture/: game_summary.md  mechanics_specification.md  networking_design.md  networking_protocol.md  roadmap.md  server_tick_architechture.md  task_breakdown.md  technical_desing.md  ui_ux_design.md  world_system.md
client/: Cargo.toml
client/src/: client_networking.rs  game.rs  main.rs  server_state.rs
client/src/asset_ingestion/: json_types.rs  load_assets.rs  mod.rs
client/src/assets/: assets.json
client/src/data/: db.sqlite
client/src/engine/: drawable.rs  graphics.rs  graphics_data.rs  mod.rs
client/src/engine/texture/: asset_info.rs  mod.rs  texture.rs  texture_info.rs  texture_manager.rs
client/src/engine/texture/texture_types/: mod.rs  player.rs  texture_type.rs
client/src/game_state/: game_state.rs  mod.rs  player.rs  server_state.rs  tile.rs
client/src/graphics/: graphics.rs  texture.rs
client/src/mesh/: chunk_mesh.rs  chunk_meshes.rs  instance_data.rs  mod.rs  tile_mesh.rs  vertex_data.rs
client/src/shader/: shader.wgsl
client/src/shaders/: shader.wgsl
client/src/ui/: button.rs  component.rs  component_types.rs  menu.rs  mod.rs  root_component.rs
client/src/ui/menu/: game_menu.rs  load_game_menu.rs  menu.rs  mod.rs  start_menu.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
server/: .env  Cargo.toml
server/src/: main.rs  server_networking.rs
server/src/connection_handlers/: handle_chat.rs  handle_chunk_stream.rs  handle_crafting.rs  handle_gameplay.rs  handle_inventory.rs  mod.rs
server_lib/: Cargo.toml
server_lib/src/: lib.rs  password.rs  server_networking.rs  server_session.rs  state.rs  thread_manager.rs
server_lib/src/state/: game_state.rs  mod.rs  session.rs
shared/: Cargo.toml
shared/src/: lib.rs  messages.rs  pos.rs  shared_networking.rs  state.rs
shared/src/entities/: accounts.rs  characters.rs  mod.rs
shared/src/map/: chunk.rs  chunk_manager.rs  height_map.rs  mod.rs  tile.rs
