[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
glam = "0.30.9"
image = "0.25.9"
noise = "0.9.0"
pollster = "0.4.0"
quinn = { version = "0.11.9", features = ["aws-lc-rs"] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = "1.0.228"
serde_json = "1.0.145"
server_lib = { version = "0.1.0", path = "../server_lib" }
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.48.0", features = ["full"] }
wgpu = "27.0.1"
winit = "0.30.12"
