[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bcrypt = "0.17.1"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
dotenvy = "0.15.7"
hex = "0.4.3"
quinn = { version = "0.11.9", features = ["aws-lc-rs"] }
rand = "0.9.2"
rcgen = "0.14.5"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = "1.0.228"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.48.0", features = ["full"] }
