[package]
name = "server_lib"
version = "0.1.0"
edition = "2024"

[lib]
name = "server_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
bcrypt = "0.17.1"
dashmap = "6.1.0"
hex = "0.4.3"
migration = { version = "0.1.0", path = "../migration" }
quinn = "0.11.9"
rand = "0.9.2"
rcgen = "0.14.5"
rustls = "0.23.35"
sea-orm = "1.1.19"
serde = "1.0.228"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
