[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
bcrypt = "0.17.1"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.0"
chrono = "0.4.42"
glam = "0.30.9"
noise = "0.9.0"
quinn = "0.11.9"
sea-orm = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
